<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" style="@style/pageStyle"
    tools:context=".MainActivity$PlaceholderFragment"
    >

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:weightSum="2"
        android:orientation="vertical"
        >
    <TextView android:id="@+id/algo_code"
              style="@style/boldTextStyle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/s_algo_code"
        />

    <EditText
        android:id="@+id/algo_save"
        style="@style/textAreaStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/s_algo_save_hint"
        android:inputType="text"
        android:imeActionLabel="@string/s_save"
        android:layout_weight="0.9"/>

    <TextView android:id="@+id/test_text"
              style="@style/boldTextStyle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/s_test_text"
              android:textStyle="bold"
        />

    <EditText
        android:id="@+id/test_text_save"
        style="@style/textAreaStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/s_test_text_hint"
        android:inputType="text"
        android:imeActionLabel="@string/s_save"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/run_test"
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/s_save_and_run_test"
        android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>
